@@ -3,42 +3,33 @@ package no.nav.veilarbperson.utils;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import no.bekk.bekkopen.person.FodselsnummerCalculator;
+import no.nav.common.types.identer.Fnr;
 
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Date;
-import java.util.Random;
 
 @Slf4j
 public class TestUtils {
 
     private static final String DATE_FORMAT = "yyyy-MM-dd";
 
-    public static String fodselsnummerForDato(String dato) {
-        String fodselsnummer = "";
+    @SneakyThrows
+    public static Fnr fodselsnummerForDato(String dato) {
         SimpleDateFormat dateFormat = new SimpleDateFormat(DATE_FORMAT);
-
-        try {
-            Date date = dateFormat.parse(dato);
-            fodselsnummer = FodselsnummerCalculator.getFodselsnummerForDate(date).toString();
-        } catch (ParseException e) {
-            log.error("Error parsing date for fodselsnummer");
-            e.printStackTrace();
-        }
-
-        return fodselsnummer;
+        Date date = dateFormat.parse(dato);
+        String fnrStr = FodselsnummerCalculator.getFodselsnummerForDate(date).toString();
+        return Fnr.of(fnrStr);
     }
 
-    public static String calculateDNummer(String fnr) {
+    public static String calculateDNummer(Fnr fnr) {
         return incrementDigit(fnr, 0, 4);
     }
 
-    public static String calculateHNumber(String fnr) {
+    public static String calculateHNumber(Fnr fnr) {
         return incrementDigit(fnr, 2, 4);
     }
 
@@ -46,14 +37,15 @@ public class TestUtils {
     public static String readTestResourceFile(String fileName) {
         URL fileUrl = TestUtils.class.getClassLoader().getResource(fileName);
         Path resPath = Paths.get(fileUrl.toURI());
-        return new String(Files.readAllBytes(resPath), StandardCharsets.UTF_8);
+        return Files.readString(resPath);
     }
 
-    private static String incrementDigit(String fnr, int index, int increment) {
-        int digit = Integer.parseInt(fnr.substring(index, index + 1));
+    private static String incrementDigit(Fnr fnr, int index, int increment) {
+        String fnrStr = fnr.get();
+        int digit = Integer.parseInt(fnrStr.substring(index, index + 1));
         digit = (digit + increment) % 10;
 
-        return fnr.substring(0, index) + Integer.toString(digit) + fnr.substring(index + 1);
+        return fnrStr.substring(0, index) + Integer.toString(digit) + fnrStr.substring(index + 1);
     }
 
 }
